--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.2.0",
     "angular-notifier": "^14.0.0",
+    "bootstrap": "^5.3.7",
     "node-notifier": "^10.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
